# newsletter_curator

./: .gitignore  AGENTS.md  PLAN.md  README.md  admin_app.py  agent_progress.md  agent_spec.md  agent_tasks.json  config.yaml  daily_pipeline.py  deliver_digest.py  fetch_gmail.py  fetch_sources.py  init.sh  main.py  pyproject.toml  subscriber_agent_progress.md  subscriber_agent_spec.md  subscriber_agent_tasks.json  subscriber_init.sh
agent_contracts/: T57_admin_service_orchestration.md  T58_subscriber_login_and_session.md  T59_subscriber_settings_persistence.md  T60_db_backed_delivery_and_signup_cta.md  T61_persona_and_discovery_tuning.md  T62_subscriber_personalization_cleanup.md  T63_recent_story_feed_mcp_server.md  T64_mcp_launch_docs_and_smoke.md  T65_mcp_story_feed_query_ergonomics.md  T66_mcp_publish_and_manifest.md  T67_codex_mcp_story_feed.md  T68_secure_debug_log_endpoint.md  T69_flatten_delivery_and_remove_footer.md  T70_opt_in_pdf_delivery.md  T71_delivery_public_host_links_and_fallback.md  T72_consistency_pass.md  T73_skip_sunday_pipeline.md  T74_pacific_weekday_decisions.md  T75_manual_weekly_digest_override.md
curator/: __init__.py  alerts.py  config.py  content.py  daily_news_agent.py  debug_logs.py  dev.py  evaluation.py  gmail.py  jobs.py  llm.py  mcp_server.py  observability.py  pdf.py  pipeline.py  preference_memory.py  pricing.py  prompts.py  rendering.py  repository.py  repository_tools.py  runtime.py  sources.py  story_feed.py  summary_format.py  telemetry.py
docs/: codex-mcp-story-feed.md  remote_server_debugging.md
scripts/: backfill_story_search_index.py  backfill_subscriber_default_sources.py  bootstrap_server.py  check_buttondown_subscribers.py  (+9 more)
(+149 files in other folders)
