[project]
name = "newsletter-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "google-api-python-client>=2.142.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "openai>=1.42.0",
    "pytest>=8.4.1",
    "requests>=2.32.3",
    "reportlab>=4.4.1",
    "pypdf>=5.4.0",
    "pyyaml>=6.0.2",
    "trafilatura>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "agent_eval: opt-in tests that call real model APIs",
]
